# common

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  setup.py
.travis/: config.mk  requirements.txt
cmake/: find_distributions.sh  generate_protobuf.sh
cmake/Modules/: FindDistributions.cmake
conda/microscopes-common/: meta.yaml
include/microscopes/common/: assert.hpp  dataview.hpp  entity_state.hpp  group_manager.hpp  macros.hpp  random.hpp  random_fwd.hpp  runtime_type.hpp  runtime_value.hpp  scalar_functions.hpp  special.hpp  static_vector.hpp  timer.hpp  type_helper.hpp  type_info.h  typedefs.hpp  util.hpp
include/microscopes/common/recarray/: dataview.hpp
include/microscopes/common/relation/: dataview.hpp
include/microscopes/common/sparse_ndarray/: dataview.hpp
include/microscopes/common/variadic/: dataview.hpp
include/microscopes/io/: schema.pb.h
include/microscopes/models/: base.hpp  bbnc.hpp  distributions.hpp  dm.hpp  niw.hpp  noop.hpp
microscopes/: _eigen_h.pxd  _models.pxd  _models.pyx  _models_h.pxd  _shared_ptr_h.pxd  models.pyx
microscopes/common/: __init__.py  _dataview.pxd  _dataview.pyx  _entity_state.pxd  _entity_state.pyx  _entity_state_h.pxd  _random_fwd_h.pxd  _random_h.pxd  _rng.pxd  _rng.pyx  _runtime_type_h.pxd  _runtime_value_h.pxd  _scalar_functions.pxd  _scalar_functions.pyx  _scalar_functions_h.pxd  _type_info_h.pxd  dataset.py  query.py  random.pyx  rng.pyx  scalar_functions.pyx  testutil.py  util.py  validator.py
microscopes/common/recarray/: _dataview.pxd  _dataview.pyx  _dataview_h.pxd  dataview.pyx
microscopes/common/relation/: _dataview.pxd  _dataview.pyx  _dataview_h.pxd  dataview.pyx
microscopes/common/variadic/: _dataview.pxd  _dataview.pyx  _dataview_h.pxd  dataview.pyx
microscopes/cxx/: _bbnc_h.pxd  _dm_h.pxd  _models.pxd  _models.pyx  _models_h.pxd  _niw_h.pxd  models.pyx
microscopes/cxx/common/: _dataview.pxd  _dataview.pyx  _dataview_h.pxd  _entity_state.pxd  _entity_state.pyx  _entity_state_h.pxd  _random_h.pxd  _rng.pxd  _rng.pyx  _runtime_type_h.pxd  _runtime_value_h.pxd  _scalar_functions.pxd  _scalar_functions.pyx  _scalar_functions_h.pxd  _type_helper_h.pxd  _type_info_h.pxd  _typedefs_h.pxd  _util_h.pxd  dataview.pyx  random.pyx  rng.pyx  scalar_functions.pyx
microscopes/cxx/common/recarray/: _dataview.pxd  _dataview.pyx  _dataview_h.pxd  dataview.pyx
microscopes/cxx/common/relation/: _dataview.pxd  _dataview.pyx  _dataview_h.pxd  dataview.pyx
microscopes/cxx/common/sparse_ndarray/: _dataview.pxd  _dataview.pyx  _dataview_h.pxd  dataview.pyx
microscopes/dbg/models/: bbnc.py  dm.py  niw.py
microscopes/io/: schema.proto  schema_pb2.py
microscopes/py/common/: dataview.py  groups.py  util.py
microscopes/py/common/recarray/: dataview.py
microscopes/py/distributions/: bbnc.py  gcp.py
microscopes/py/models/: bbnc.py  dm.py  niw.py
src/common/: assert.cpp  dataview.cpp  group_manager.cpp  runtime_type.cpp  runtime_value.cpp  scalar_functions.cpp  type_helper.cpp  util.cpp
src/common/recarray/: dataview.cpp
src/common/relation/: dataview.cpp
src/common/sparse_ndarray/: dataview.cpp
src/common/variadic/: dataview.cpp
src/io/: schema.pb.cpp
src/models/: bbnc.cpp  distributions.cpp  dm.cpp  niw.cpp  noop.cpp
test/: test_cxx_imports.py  test_cxx_numpy_dataview.py  test_cxx_sparse_2d_dataview.py  test_dataview.py  test_default_parameters.py  test_distributions_gcp.py  test_distributions_niw.py  test_group_manager.py  test_imports.py  test_models.py  test_query.py  test_rng.py  test_validator.py
test/cxx/: test_group_manager.cpp  test_headers.cpp  test_relation.cpp  test_sparse_ndarray.cpp
